--- a/css/styles.css
+++ b/css/styles.css
@@ -3,4 +3,5 @@
 @import url('header.css');
 @import url('footer.css');
 @import url('components.css');
-@import url('responsive.css');  
+@import url('responsive.css');
+@import url('theme.css');
